--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,7 @@ staticman:
  branch: comment_branch
  commitMessage: "Hey human, here is a new comment."
  filename: "comment{@timestamp}"
+ format: yml
  moderation: true
  path: "_comments"
  requiredFields: ['name', 'comment']
