--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: LK Loh
 email: lkloh
 description: > # this means to ignore newlines until "baseurl:"
-  Exploring the tech scene in San Francisco.
+  Software engineer in San Francisco.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "lkloh.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: lkloh1024
@@ -31,7 +31,8 @@ exclude:
   - Gemfile
   - Gemfile.lock
 
-
+# Staticman
+staticmanUrl: https://api.staticman.net/v2/entry/lkloh/lkloh.github.io/master/comments
 
 
 
