--- a/staticman.yml
+++ b/staticman.yml
@@ -10,7 +10,17 @@ comments:
 
   commitMessage: "Hey human, here is a new comment."
 
-  path: "_data/comments/options.slug"
+  path: "_data/comments"
+
+  # List of fields to be populated automatically by Staticman and included in
+  # the data file. Keys are the name of the field. The value can be an object
+  # with a `type` property, which configures the generated field, or any value
+  # to be used directly (e.g. a string, number or array)
+  generatedFields:
+    date:
+      type: date
+      options:
+        format: "timestamp-seconds"
 
   # Destination path (filename) for the data files.
   filename: "comment{@timestamp}"
