--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ exclude:
   - Gemfile.lock
 
 # Staticman
-staticmanUrl: https://api.staticman.net/v2/entry/lkloh/lkloh.github.io/master/comments
+staticmanUrl: https://api.staticman.net/v2/entry/lkloh/lkloh.github.io/master
 
 
 
