--- a/staticman.yml
+++ b/staticman.yml
@@ -6,11 +6,14 @@ comments:
 
   allowedOrigins: ["localhost", "lkloh.github.io"]
 
-  branch: master
+  branch: "master"
 
   commitMessage: "Hey human, here is a new comment."
 
-  path: "_data/comments"
+  # Destination path (filename) for the data files.
+  filename: "comment{@timestamp}"
+
+  format: "yaml"
 
   # List of fields to be populated automatically by Staticman and included in
   # the data file. Keys are the name of the field. The value can be an object
@@ -21,18 +24,16 @@ comments:
       type: date
       options:
         format: "timestamp-seconds"
-
-  # Destination path (filename) for the data files.
-  filename: "comment{@timestamp}"
-
-  format: yaml
-
+  
+  # Whether entries need to be appproved before they are published to the main
+  # branch. If set to `true`, a pull request will be created for your approval.
+  # Otherwise, entries will be published to the main branch automatically.
   moderation: true
 
   # Name of the site. Used in notification emails.
   name: "lkloh.github.io"
 
-  notifications:
-    enabled: true
+  # Destination path (directory) for the data files. Accepts placeholders.
+  path: "_data/comments/{options.slug}"
 
-  requiredFields: ['name', 'comment']
+  requiredFields: ["name", "comment"]
