--- a/_config.yml
+++ b/_config.yml
@@ -13,18 +13,17 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: LK Loh
-email: lkloh
-description: > # this means to ignore newlines until "baseurl:"
-  Software engineer in San Francisco.
+title: "LK Loh"
+author: "LK Loh"
+email: "lkloh2410@gmail.com"
+description: "Software engineer in San Francisco."
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "lkloh.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: lkloh1024
 github_username: lkloh
 
-# Build settings
 markdown: kramdown
-theme: minima
+
 gems:
   - jekyll-feed
 exclude:
