Inlining in python

--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,10 @@ github_username: lkloh
 
 markdown: kramdown
 
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
+
 gems:
   - jekyll-feed
 exclude:
