Handling merge conflicts

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: "Things I Learnt Today"
+title: "Things I Just Learnt"
 author: "LK Loh"
 email: "lkloh2410@gmail.com"
 description: "That I really should know, but didn't"
