--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: "Things I Should Know"
 author: "LK Loh"
 email: "lkloh2410@gmail.com"
-description: "but someone only just learnt"
+description: "but somehow only just learnt"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "lkloh.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: lkloh1024
