--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,10 @@ github_username: lkloh
 
 markdown: kramdown
 
+plugins: jekyll-paginate
+paginate: 10
+paginate_path: "/blog/page:num/"
+
 kramdown:
   input: GFM
   syntax_highlighter: rouge
