--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ markdown: kramdown
 
 plugins: jekyll-paginate
 paginate: 10
-paginate_path: "/blog/page:num/"
+paginate_path: "/_layouts/page:num/"
 
 kramdown:
   input: GFM
