--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,8 @@ plugins_dir:
   - jekyll-paginate
 
 
-paginate: 7
-paginate_path: "/blog/page:num/"
+paginate: 10
+paginate_path: "/page:num/"
 
 kramdown:
   input: GFM
